--- a/sources/config.yaml
+++ b/sources/config.yaml
@@ -1,13 +1,12 @@
     sources:
       - BodoniModa.glyphs
       - BodoniModa-Italic.glyphs
-    familyName: Bodoni Moda
-    buildOTF: False
-    buildWebfont: False
+    buildStatic: false
     axisOrder:
       - opsz
       - wght
       - ital
+    familyName: Bodoni Moda
     stat:
       BodoniModa[opsz,wght].ttf:
       - name: Optical size
@@ -15,19 +14,18 @@
         values:
         - name: 6pt
           value: 6
-          flags: 2
-        - name: 11pt
-          value: 11
-        - name: 16pt
-          value: 16
-        - name: 24pt
-          value: 24
-        - name: 36pt
-          value: 36
-        - name: 48pt
-          value: 48
-        - name: 72pt
-          value: 72
+        # - name: 11pt
+        #   value: 11
+        # - name: 16pt
+        #   value: 16
+        # - name: 24pt
+        #   value: 24
+        # - name: 36pt
+        #   value: 36
+        # - name: 48pt
+        #   value: 48
+        # - name: 72pt
+        #   value: 72
         - name: 96pt
           value: 96                                        
       - name: Weight
@@ -60,19 +58,18 @@
         values:
         - name: 6pt
           value: 6
-          flags: 2
-        - name: 11pt
-          value: 11
-        - name: 16pt
-          value: 16
-        - name: 24pt
-          value: 24
-        - name: 36pt
-          value: 36
-        - name: 48pt
-          value: 48
-        - name: 72pt
-          value: 72
+        # - name: 11pt
+        #   value: 11
+        # - name: 16pt
+        #   value: 16
+        # - name: 24pt
+        #   value: 24
+        # - name: 36pt
+        #   value: 36
+        # - name: 48pt
+        #   value: 48
+        # - name: 72pt
+        #   value: 72
         - name: 96pt
           value: 96
       - name: Weight
