set up fixed to export the fonts + some interpolation issues corrected

--- a/sources/config.yaml
+++ b/sources/config.yaml
@@ -14,18 +14,18 @@
         values:
         - name: 6pt
           value: 6
-        # - name: 11pt
-        #   value: 11
-        # - name: 16pt
-        #   value: 16
-        # - name: 24pt
-        #   value: 24
-        # - name: 36pt
-        #   value: 36
-        # - name: 48pt
-        #   value: 48
-        # - name: 72pt
-        #   value: 72
+        - name: 11pt
+          value: 11
+        - name: 16pt
+          value: 16
+        - name: 24pt
+          value: 24
+        - name: 36pt
+          value: 36
+        - name: 48pt
+          value: 48
+        - name: 72pt
+          value: 72
         - name: 96pt
           value: 96                                        
       - name: Weight
@@ -58,18 +58,18 @@
         values:
         - name: 6pt
           value: 6
-        # - name: 11pt
-        #   value: 11
-        # - name: 16pt
-        #   value: 16
-        # - name: 24pt
-        #   value: 24
-        # - name: 36pt
-        #   value: 36
-        # - name: 48pt
-        #   value: 48
-        # - name: 72pt
-        #   value: 72
+        - name: 11pt
+          value: 11
+        - name: 16pt
+          value: 16
+        - name: 24pt
+          value: 24
+        - name: 36pt
+          value: 36
+        - name: 48pt
+          value: 48
+        - name: 72pt
+          value: 72
         - name: 96pt
           value: 96
       - name: Weight
